# registry-conformance

./: Cargo.toml  README.md  build.rs  config.json  index.html  margo-config.toml
.github/workflows/: release.yml
crates/re/gi/registry-conformance/: 0.1.0.crate  0.1.1.crate  0.2.0.crate  0.3.0.crate  0.4.0.crate  0.5.0.crate  0.5.1.crate  0.5.2.crate  0.5.3.crate
re/gi/: registry-conformance
src/: lib.rs
