[package]
name = "registry-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
assertables = { version = "7.0.1", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
regex = { version = "1.10.4", default-features = false, features = ["std"] }
serde = { version = "1.0.197", default-features = false, features = ["derive", "std"] }
snafu = { version = "0.8.2", default-features = false, features = ["rust_1_65", "std"] }
tempfile = { version = "3.10.1", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = { version = "0.8.12", default-features = false, features = ["display"] }
